	PR pch/13676 	* doc/invoke.texi: Add .hp, .hxx, .hpp, .h, .HPP, .tcc as c++ header.

cp:
	* lang-specs.h: Add .hp, .hxx, .hpp, .h, .HPP, .tcc as c++ header.
	* g++spec.c (lang_specific_driver): Check them.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@127239 138bc75d-0d04-0410-961f-82ee72b054a4